# fundlens

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md
backend/: manage.py  pyproject.toml
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py
backend/tests/: test_settings.py
docs/: architecture.md  setup.md
docs/decisions/: 0001-use-a-monorepo.md
frontend/: package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx
frontend/src/i18n/: index.ts
frontend/src/i18n/locales/: de.json  en.json  fr.json
