[project]
name = "fundlens-backend"
version = "0.1.0"
description = "FundLens REST API — AI document intelligence for fund compliance"
requires-python = ">=3.12,<3.15"
dependencies = [
    "django (>=6.0.5,<6.1)",
    "python-dotenv (>=1.0,<2.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.15"
black = "^26.1"
django-stubs = { extras = ["compatible-mypy"], version = "^6.0" }
pytest = ">=8.4"
pytest-django = "^4.12"

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["**/migrations/*"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "DJ", "SIM", "C4"]

[tool.black]
target-version = ["py312"]
line-length = 88

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
strict = true
exclude = ["migrations"]

[tool.django-stubs]
django_settings_module = "config.settings.dev"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.dev"
testpaths = ["tests"]
python_files = ["test_*.py"]
